tests/idris2/total/total029/expected
1/1: Building Main (Main.idr)
Error: f is not total, possibly not terminating due to function Main.i being reachable via Main.g -> Main.h -> Main.i

Main:3:1--3:17
 1 | %default total
 2 | 
 3 | f : Bool -> Void
     ^^^^^^^^^^^^^^^^

Error: g is not total, possibly not terminating due to function Main.i being reachable via Main.h -> Main.i

Main:4:1--4:17
 1 | %default total
 2 | 
 3 | f : Bool -> Void
 4 | g : Bool -> Void
     ^^^^^^^^^^^^^^^^

Error: h is not total, possibly not terminating due to call to Main.i

Main:5:1--5:17
 1 | %default total
 2 | 
 3 | f : Bool -> Void
 4 | g : Bool -> Void
 5 | h : Bool -> Void
     ^^^^^^^^^^^^^^^^

Error: i is not total, possibly not terminating due to recursive path Main.i

Main:6:1--6:17
 2 | 
 3 | f : Bool -> Void
 4 | g : Bool -> Void
 5 | h : Bool -> Void
 6 | i : Bool -> Void
     ^^^^^^^^^^^^^^^^

Error: j is not total, possibly not terminating due to call to Main.f

Main:7:1--7:17
 3 | f : Bool -> Void
 4 | g : Bool -> Void
 5 | h : Bool -> Void
 6 | i : Bool -> Void
 7 | j : Bool -> Void
     ^^^^^^^^^^^^^^^^

